[project]
name = "pre_tokenizer"
version = "0.1.2"
description = "A simple tokenizer library"
readme = "README.md"
authors = [{name = "Prachi Kushwaha"}]
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pre_tokenizer*"]